force-app/main/default/objects/Case/fields/Account_Present__c.field-meta.xml
<CustomField>
    <fullName>Account_Present__c</fullName>
    <formula>NOT(ISBLANK(AccountId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Present</label>
    <type>Checkbox</type>
</CustomField>