force-app/main/default/objects/Case/fields/Agent_wait_time_calendar__c.field-meta.xml
<CustomField>
    <fullName>Agent_wait_time_calendar__c</fullName>
    <label>Agent wait time (calendar)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>