force-app/main/default/objects/Case/fields/Awaiting_Reply_Since__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Reply_Since__c</fullName>
    <label>Awaiting Reply Since</label>
    <type>DateTime</type>
</CustomField>