force-app/main/default/objects/Case/fields/Business_Days_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_Since_Created__c</fullName>
    <formula>IF(
    NOT(ISBLANK(CreatedDate)),
    (
        5 * FLOOR((TODAY() - DATEVALUE(CreatedDate)) / 7) + 
        MIN(5, MOD(TODAY() - DATEVALUE(CreatedDate), 7))
    ) + 
    (
        CASE(
            MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 1), 7),
            0, 1,
            1, 1,
            2, 1,
            3, 1,
            4, 1,
            5, 1,
            6, 0,
            0
        ) * 
        (
            24 - VALUE(MID(TEXT(CreatedDate), 12, 2)) - (VALUE(MID(TEXT(CreatedDate), 15, 2)) / 60.0)
        ) / 24.0
    ) +
    (
        CASE(
            MOD(TODAY() - DATE(1900, 1, 1), 7),
            0, 1,
            1, 1,
            2, 1,
            3, 1,
            4, 1,
            5, 1,
            6, 0,
            0
        ) * 
        (
            VALUE(MID(TEXT(NOW()), 12, 2)) + (VALUE(MID(TEXT(NOW()), 15, 2)) / 60.0)
        ) / 24.0
    ) - 1,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days Since Created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>