force-app/main/default/objects/Case/fields/Business_Hours_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_to_Close__c</fullName>
    <label>Business Hours to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>