force-app/main/default/objects/Case/fields/Case_AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>Case_AI_Summary__c</fullName>
    <label>Case AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>