force-app/main/default/objects/Case/fields/Case_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Duration_Days__c</fullName>
    <formula>IF(
    ISBLANK(ClosedDate),
    ROUND((NOW() - CreatedDate), 2),
    ROUND((ClosedDate - CreatedDate), 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Duration (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>