force-app/main/default/objects/Case/fields/Case_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Duration_Hours__c</fullName>
    <formula>IF(
    ISBLANK(ClosedDate), 
    (NOW() - CreatedDate) * 24,
    (ClosedDate - CreatedDate) * 24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>