force-app/main/default/objects/Case/fields/Case_Duration_Since_Reopening_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Duration_Since_Reopening_Days__c</fullName>
    <formula>IF(
ISBLANK(ClosedDate),
ROUND((NOW() - Date_Time_Reopened__c ), 2),
ROUND((ClosedDate -  Date_Time_Reopened__c ), 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Duration Since Reopening (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>