force-app/main/default/objects/Case/fields/Case_Duration_Since_Reopening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Duration_Since_Reopening_Hours__c</fullName>
    <formula>IF(
ISBLANK(ClosedDate),
(NOW() -  Date_Time_Reopened__c  ) * 24,
(ClosedDate - Date_Time_Reopened__c ) * 24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Duration Since Reopening (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>