force-app/main/default/objects/Case/fields/Case_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Case_Estimation__c</fullName>
    <label>Case Estimation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 - 15 minutes</fullName>
            </value>
            <value>
                <fullName>16 - 30 minutes</fullName>
            </value>
            <value>
                <fullName>31 - 60 minutes</fullName>
            </value>
            <value>
                <fullName>1 - 2 hours</fullName>
            </value>
            <value>
                <fullName>3 - 4 hours</fullName>
            </value>
            <value>
                <fullName>5 - 8 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>