force-app/main/default/objects/Case/fields/CPR_Event__c.field-meta.xml
<CustomField>
    <fullName>CPR_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPR Event</label>
    <referenceTo>CPR_Event__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>