force-app/main/default/objects/Case/fields/Date_Time_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Response_Received__c</fullName>
    <label>Date/Time Response Received</label>
    <type>DateTime</type>
</CustomField>