force-app/main/default/objects/Case/fields/Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Emails_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>