force-app/main/default/objects/Case/fields/First_Reply_time_business__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_time_business__c</fullName>
    <label>First Reply time (business)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>