force-app/main/default/objects/Case/fields/First_Response_By__c.field-meta.xml
<CustomField>
    <fullName>First_Response_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Response By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>