force-app/main/default/objects/Case/fields/First_Response_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Duration_Days__c</fullName>
    <formula>IF(
    ISBLANK(First_Response_Time__c), 
    NULL, 
    ROUND(First_Response_Time__c - CreatedDate, 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the difference, in days, between Date/Time Opened and First Response Time. If there is no First Response Time, this field is empty.</inlineHelpText>
    <label>First Response Duration (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>