force-app/main/default/objects/Case/fields/GetAccept_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>GetAccept_Document_URL__c</fullName>
    <label>GetAccept Document URL</label>
    <type>Url</type>
</CustomField>