force-app/main/default/objects/Case/fields/Is_Case_Made_by_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Made_by_Current_User__c</fullName>
    <formula>IF(  SuppliedEmail = $User.Email , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Made by Current User?</label>
    <type>Checkbox</type>
</CustomField>