force-app/main/default/objects/Case/fields/Is_Case_Owner_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Owner_Current_User__c</fullName>
    <formula>IF(  Owner:User.Id  = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Owner Current User?</label>
    <type>Checkbox</type>
</CustomField>