force-app/main/default/objects/Case/fields/Is_Categorized__c.field-meta.xml
<CustomField>
    <fullName>Is_Categorized__c</fullName>
    <formula>AND(
    NOT(ISPICKVAL(Issue_Origin__c, &quot;&quot;)),
    NOT(ISPICKVAL(Issue_Category__c, &quot;&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Categorized</label>
    <type>Checkbox</type>
</CustomField>