force-app/main/default/objects/Case/fields/Is_Closed_By_Super_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed_By_Super_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed By Super User</label>
    <type>Checkbox</type>
</CustomField>