force-app/main/default/objects/Case/fields/Is_Review__c.field-meta.xml
<CustomField>
    <fullName>Is_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Review</label>
    <type>Checkbox</type>
</CustomField>