force-app/main/default/objects/Case/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anti Virus</fullName>
            </value>
            <value>
                <fullName>API Connections</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Automation Rules/Flows</fullName>
            </value>
            <value>
                <fullName>Booking Platform</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>Call Campaign</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Customer Document Portal</fullName>
            </value>
            <value>
                <fullName>Dashboard/Reporting</fullName>
            </value>
            <value>
                <fullName>Data Quality/Validation</fullName>
            </value>
            <value>
                <fullName>Data Syncing/Integration</fullName>
            </value>
            <value>
                <fullName>DocFabricator</fullName>
            </value>
            <value>
                <fullName>Einstein Activity Capture</fullName>
            </value>
            <value>
                <fullName>Email System</fullName>
            </value>
            <value>
                <fullName>Employee Manager</fullName>
            </value>
            <value>
                <fullName>Forgot Password</fullName>
            </value>
            <value>
                <fullName>GetAccept</fullName>
            </value>
            <value>
                <fullName>Google Workspace</fullName>
            </value>
            <value>
                <fullName>Intranet</fullName>
            </value>
            <value>
                <fullName>Lead Conversion</fullName>
            </value>
            <value>
                <fullName>Lead Creation</fullName>
            </value>
            <value>
                <fullName>Lead Ownership Assignment</fullName>
            </value>
            <value>
                <fullName>Membership Platform</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>New Field</fullName>
            </value>
            <value>
                <fullName>New User Setup</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Payment Gateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>