force-app/main/default/objects/Case/fields/Issue_Origin__c.field-meta.xml
<CustomField>
    <fullName>Issue_Origin__c</fullName>
    <label>Issue Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Feature Misuse</fullName>
            </value>
            <value>
                <fullName>System Bug/Defect</fullName>
            </value>
            <value>
                <fullName>External Factors (Force Majeure)</fullName>
            </value>
            <value>
                <fullName>Integration or Third-Party System Failure</fullName>
            </value>
            <value>
                <fullName>Misrouted (Not IT-Related)</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Triggered by Testing</fullName>
            </value>
            <value>
                <fullName>System Message</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Update Request</fullName>
            </value>
            <value>
                <fullName>Forgotten Password</fullName>
            </value>
            <value>
                <fullName>Standard Process</fullName>
            </value>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>User Stopped Responding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>