force-app/main/default/objects/Case/fields/IT_Submitted__c.field-meta.xml
<CustomField>
    <fullName>IT_Submitted__c</fullName>
    <label>IT Submitted</label>
    <type>DateTime</type>
</CustomField>