force-app/main/default/objects/Case/fields/Lead_Present__c.field-meta.xml
<CustomField>
    <fullName>Lead_Present__c</fullName>
    <formula>NOT(ISBLANK(Lead__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Present</label>
    <type>Checkbox</type>
</CustomField>