force-app/main/default/objects/Case/fields/Mark_as_My_Case__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_My_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark as My Case</label>
    <type>Checkbox</type>
</CustomField>