force-app/main/default/objects/Case/fields/Most_Recent_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Closed_Date__c</fullName>
    <inlineHelpText>This field is set every time a case is marked as closed. This is useful in scenarios where a case is reopened, after being closed. In scenarios where a case is only closed once, this field will match &quot;Date/Time Closed&quot;</inlineHelpText>
    <label>Most Recent Closed Date</label>
    <type>DateTime</type>
</CustomField>