force-app/main/default/objects/Case/fields/Most_Recent_Response_By__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Response_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Response By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>