force-app/main/default/objects/Case/fields/Notification_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Notification_Preferences__c</fullName>
    <description>User preferences for case notifications (Salesforce, Email, Slack)</description>
    <label>Notification Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>