force-app/main/default/objects/Case/fields/On_Hold_time_business__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_time_business__c</fullName>
    <label>On-Hold time (business)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>