force-app/main/default/objects/Case/fields/On_Hold_time_calendar__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_time_calendar__c</fullName>
    <label>On-Hold time (calendar)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>