force-app/main/default/objects/Case/fields/Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Discount__c</fullName>
    <formula>Order__r.Total_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>