force-app/main/default/objects/Case/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>IF(
    AND(
        Business_Days_Since_Created__c &gt; 1,
        NOT(ISPICKVAL(Status, &quot;Closed&quot;))
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>