force-app/main/default/objects/Case/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>IF(
  BEGINS(OwnerId, &quot;005&quot;),
  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,
  IF(
    BEGINS(OwnerId, &quot;00G&quot;),
    Owner:Queue.Name,
    &quot;&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>