force-app/main/default/objects/Case/fields/Refund_Request_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the amount that has been manually input as what the customer requests to have refunded.</inlineHelpText>
    <label>Refund Request Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>