force-app/main/default/objects/Case/fields/Refund_Request_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Request Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>