force-app/main/default/objects/Case/fields/Refund_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request_Date__c</fullName>
    <label>Refund Request Date</label>
    <type>DateTime</type>
</CustomField>