force-app/main/default/objects/Case/fields/Refund_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request_Reason__c</fullName>
    <label>Refund Request Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>