force-app/main/default/objects/Case/fields/Requester_wait_time_calendar__c.field-meta.xml
<CustomField>
    <fullName>Requester_wait_time_calendar__c</fullName>
    <label>Requester wait time (calendar)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>