force-app/main/default/objects/Case/fields/Review_Platform__c.field-meta.xml
<CustomField>
    <fullName>Review_Platform__c</fullName>
    <label>Review Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Trustpilot</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>